[gd_scene load_steps=4 format=3 uid="uid://depps5xl7c0vf"]

[ext_resource type="Theme" uid="uid://cet12s7ldeodg" path="res://themes/theme_ui.tres" id="1_ekxnf"]
[ext_resource type="Texture2D" uid="uid://ujwgpswjpxn3" path="res://resources/main-menu-wallpaper.jpg" id="1_l6cm7"]
[ext_resource type="Script" uid="uid://g0tkdmh2gs82" path="res://scripts/main_menu.gd" id="2_bqqt6"]

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ekxnf")
script = ExtResource("2_bqqt6")

[node name="Background" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ParallaxBackground" type="ParallaxBackground" parent="Background"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background/ParallaxBackground"]

[node name="TextureRect" type="TextureRect" parent="Background/ParallaxBackground/ParallaxLayer"]
offset_right = 3211.0
offset_bottom = 1173.0
texture = ExtResource("1_l6cm7")
expand_mode = 3
stretch_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 1936.0
grow_horizontal = 2
theme_override_constants/margin_top = 49

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 46
text = "مرحبًا بك في لعبة كلمات!"
fit_content = true
horizontal_alignment = 1

[node name="ButtonsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.0
offset_top = -138.0
offset_right = 92.0
offset_bottom = 138.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 45

[node name="multiplayerButton" type="Button" parent="ButtonsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "جماعي"

[node name="soloButton" type="Button" parent="ButtonsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "فردي"

[node name="openStats" type="Button" parent="ButtonsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "الاحصائيات"

[connection signal="pressed" from="ButtonsContainer/multiplayerButton" to="." method="_on_multiplayer_button_pressed"]
[connection signal="pressed" from="ButtonsContainer/soloButton" to="." method="_on_solo_button_pressed"]
[connection signal="pressed" from="ButtonsContainer/openStats" to="." method="_on_open_stats_pressed"]
